fix(frontend): :lipstick: gap between label and input

--- a/frontend/src/components/AriaDatePicker/AriaDatePicker.module.scss
+++ b/frontend/src/components/AriaDatePicker/AriaDatePicker.module.scss
@@ -4,6 +4,8 @@
   width: 100%;
   .label {
     @include input-label;
+    margin-bottom: 0.25rem;
+    display: block;
   }
   .dateInputGroup {
     display: flex;
